<resources>
    <string name="app_name">Police</string>
    <string name="sign_in_button">SignIn</string>
    <string name="sign_up_button">SignUp</string>
    <string name="reset_button">Reset</string>
    <string name="cancle_button">Cancle</string>
    <string name="login_email">Enter e-mail</string>
    <string name="login_password">Password</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Admin-Home</string>
    <string name="add_station">Add Police Station</string>
    <string name="menu_view_station">All Police Station</string>
    <string name="menu_complain">Complain</string>
    <string name="menu_user_list">User List</string>
    <string name="admin_log_out">Log Out</string>
    <string name="admin_change_password">Change Password</string>
    <string name="title_activity_admin">Admin</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
