<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="Home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_police_station_24"
            android:title="@string/add_station" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_list_numbered_24dp"
            android:title="@string/menu_view_station" />
        <item
            android:id="@+id/nav_complain"
            android:icon="@drawable/complain_24dp"
            android:title="@string/menu_complain" />

        <item
            android:id="@+id/nav_userList"
            android:icon="@drawable/ic_user_black_24dp"
            android:title="@string/menu_user_list" />
    </group>

    <item android:title="Manage">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/lock_change_24dp"
                android:title="@string/admin_change_password" />
            <item
                android:id="@+id/nav_admin_logout"
                android:icon="@drawable/ic_exit_24dp"
                android:title="@string/admin_log_out" />
        </menu>
    </item>

</menu>
